# option_arb

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: arb.rs  config.rs  dashboard.html  db.rs  exchanges.rs  history.rs  main.rs  model.rs  models.rs  poller.rs  scan.rs  web.rs
src/binance/: mod.rs  rest.rs  ws_options.rs  ws_spot.rs
src/web/: index.html  mod.rs
